# 331

proj01/: Makefile  Stack.h  Terminal.cpp  TerminalStack  main.cpp  void homePop(){  void homePop.cpp
proj01/tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  RunStacksProjectTests  StacksProjectTests.cpp  cmake_clean  cmake_install.cmake
proj01/tests/ext/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
proj01/tests/src/: Exceptions.h  Terminal.h
proj02/: BinarySearchTree.h  Exceptions.h  Set.h  main.cpp
